--- a/settings.org
+++ b/settings.org
@@ -5,40 +5,10 @@
 ;; Use straight.el for use-package expressions
 (straight-use-package 'use-package)
 #+end_src
-* Moved from package-selected-packages
-
-I don't know if I really need all of these. 
-#+BEGIN_SRC emacs-lisp
-(straight-use-package 'free-keys)
-(straight-use-package 'exec-path-from-shell)
-(straight-use-package 'rjsx-mode)
-(straight-use-package 'olivetti)
-;;(straight-use-package 'olivetti-mode)
-(straight-use-package 'format-all)
-(straight-use-package 'pyvenv)
-(straight-use-package 'org-bullets)
-(straight-use-package 'vterm)
-(straight-use-package 'typescript-mode)
-(straight-use-package 'doom-themes)
-(straight-use-package 'zenburn-theme)
-(straight-use-package 'key-chord)
-(straight-use-package 'expand-region)
-(straight-use-package 'rustic)
-(straight-use-package 'lsp-mode)
-(straight-use-package 'projectile)
-(straight-use-package 'which-key)
-(straight-use-package 'vertico)
-(straight-use-package 'use-package)
-(straight-use-package 'orderless)
-(straight-use-package 'marginalia)
-(straight-use-package 'dashboard)
-(straight-use-package 'consult)
-(straight-use-package 'ace-window)
-#+END_SRC
-
 * Path from shell
 
 #+begin_src emacs-lisp
+(straight-use-package 'exec-path-from-shell)
 (defun set-exec-path-from-shell-PATH ()
   "Set up Emacs' `exec-path' and PATH environment variable to match
 that used by the user's shell.
@@ -238,6 +208,16 @@ apps are not started from a shell."
     :config
     (setq rustic-format-on-save t))
 #+end_src
+** Type/Javascript
+
+#+BEGIN_SRC emacs-lisp
+(straight-use-package 'rjsx-mode)
+(straight-use-package 'typescript-mode)
+
+(setq js-indent-level 2)
+(setq typescript-indent-level 2)
+
+#+END_SRC
 ** Go
 #+BEGIN_SRC emacs-lisp
 (straight-use-package 'go-mode)
@@ -327,10 +307,25 @@ Setting this to a non-nil value makes it work like literally every other program
   :straight t
   )
 #+end_src
+** VTERM
+
+#+BEGIN_SRC emacs-lisp
+(straight-use-package 'vterm)
+
+#+END_SRC
 ** Tab Out
 #+BEGIN_SRC
 
 (add-hook 'prog-mode-hook 'tab-jump-out-mode)
+#+END_SRC
+** Which Key
+
+#+BEGIN_SRC emacs-lisp
+
+    (use-package which-key
+      :straight t
+       :config
+       (which-key-mode))
 #+END_SRC
 
 ** Electric Pairs
@@ -360,7 +355,6 @@ Setting this to a non-nil value makes it work like literally every other program
 
 #+end_src
  
-
 ** Org Mode
 
 #+begin_src emacs-lisp
@@ -433,7 +427,6 @@ Setting this to a non-nil value makes it work like literally every other program
 #+RESULTS:
 : t
 
-
 ** Programing
 
 
@@ -467,6 +460,7 @@ Setting this to a non-nil value makes it work like literally every other program
 	     (typescript-mode . lsp)
 	     (javascript-mode . lsp)
 	     (js-mode . lsp)
+	     (css-mode . lsp)
 	     (lsp-mode . lsp-enable-which-key-integration))
      :commands lsp)
 
@@ -493,10 +487,6 @@ Setting this to a non-nil value makes it work like literally every other program
       :hook (lsp-mode . lsp-ui-mode))
 
 
-    (use-package which-key
-      :straight t
-       :config
-       (which-key-mode))
 #+end_src
 *** Python
 
@@ -645,6 +635,7 @@ Setting this to a non-nil value makes it work like literally every other program
   #+end_src
 
 ** Which Key
+Pops up information for the available key completions.
 
 #+begin_src emacs-lisp
   (use-package which-key
@@ -652,6 +643,13 @@ Setting this to a non-nil value makes it work like literally every other program
    :config
    (which-key-mode))
 #+end_src
+
+** Free Key
+Invoke to see which keys are free in current buffer.
+
+#+BEGIN_SRC emacs-lisp
+(straight-use-package 'free-keys)
+#+END_SRC
 
 ** Complete Anything
 
@@ -753,6 +751,11 @@ bq bz cf cj cv cx fq fv fx fz gq gv gx hx hz jb jd jf jg jh jl jm jp jq jr js jt
 #+BEGIN_SRC emacs-lisp
 
 #+END_SRC
+** Formatting
+#+BEGIN_SRC emacs-lisp
+(straight-use-package 'apheleia)
+(apheleia-global-mode +1)
+#+END_SRC
 
 * Custom Behaviors
 #+BEGIN_SRC emacs-lisp
@@ -764,3 +767,6 @@ bq bz cf cj cv cx fq fv fx fz gq gv gx hx hz jb jd jf jg jh jl jm jp jq jr js jt
   ;; (add-hook 'before-save-hook #'aqr-python-format-before-save)
 
 #+END_SRC
+
+
+
